Fix cards gap

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -4,7 +4,7 @@
   padding: 0;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  grid-gap: 16px;
+  grid-gap: 18px;
 }
 
 .cards > ul > li {
